--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.jpa.hibernate.ddl-auto=update
 #project.image=images/
 spring.datasource.url=jdbc:mysql://localhost:3306/blog-shashi
 spring.datasource.username=root
-spring.datasource.password=Shashi@123
+spring.datasource.password=Shashi123
 spring.jpa.show-sql=true
 logging.level.org.springframework.security=DEBUG
