--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=8282
+server.port=9292
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #create , update ,  create-drop, validate
@@ -7,8 +7,8 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.servlet.multipart.max-file-size=10MB
 #spring.servlet.multipart.max-request-size=10MB
 #project.image=images/
-spring.datasource.url=jdbc:mysql://localhost:3306/blog-shashi
+spring.datasource.url=jdbc:mysql://localhost:3306/shashi-blog
 spring.datasource.username=root
-spring.datasource.password=Shashi123
+spring.datasource.password=Shashi@123
 spring.jpa.show-sql=true
 logging.level.org.springframework.security=DEBUG
