--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=9292
+server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #create , update ,  create-drop, validate
@@ -7,8 +7,44 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.servlet.multipart.max-file-size=10MB
 #spring.servlet.multipart.max-request-size=10MB
 #project.image=images/
-spring.datasource.url=jdbc:mysql://localhost:3306/shashi-blog
+#spring.datasource.url=jdbc:mysql://localhost:3306/shashi-blog
+#spring.datasource.username=root
+#spring.datasource.password=Shashi@123
+#spring.jpa.show-sql=true
+#logging.level.org.springframework.security=DEBUG
+
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+# Extract JDBC-compatible URL from MYSQL_PUBLIC_URLs
+spring.datasource.url=jdbc:mysql://root:rweCiSuEQfJiddyrlFnmKPMRLbgpTqbB@centerbeam.proxy.rlwy.net:42611/railway
 spring.datasource.username=root
-spring.datasource.password=Shashi@123
-spring.jpa.show-sql=true
-logging.level.org.springframework.security=DEBUG
+spring.datasource.password=rweCiSuEQfJiddyrlFnmKPMRLbgpTqbB
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+##mysql://root:jFeqmsYXTsoINbqrLDlHrSTeQliYHOGt@switchback.proxy.rlwy.net:50648/railway
+#
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#
+#spring.config.import=optional:env.properties
+
+#railway connection with password
+#spring.application.name=Galli11
+#server.port=8080
+#
+## JDBC connection using Railway-provided environment variables
+#spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQL_DATABASE}
+#spring.datasource.username=${MYSQLUSER}
+#spring.datasource.password=${MYSQLPASSWORD}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+## JPA and Hibernate configuration
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#
+#spring.config.import=optional:env.properties
+
+
